# MaPra

./: README.md
A4_VierGewinnt/: Makefile  minimax.h  vierGewinnt.cpp
A_Zusatz_2/: Main.cpp  test.sh
Aufgabe01/: meina1.cpp
Aufgabe02/: main.cpp
Aufgabe02b/: Makefile  sort.cpp  sort.h  student.cpp
Aufgabe03/: Makefile  cg.txt  gauss_seidel.txt  jacobi.txt  matrix.cpp  matrix.h  test.cpp  vektor.cpp
AufgabeInf01/: a3.cpp
Topologie/: a.out  main.cpp  unit.h
astern/: CoordinateVisualizer.cpp  CoordinateVisualizer.h  MazeVisualizer.cpp  MazeVisualizer.h  a.out  a_stern.cpp  a_stern.h  make_cmd  meson.build
astern/teil_b/: a.out  sfml_test  sfml_test.cpp
